Fix buttons alignment

--- a/gites/calendar/browser/resources/timeframe.css
+++ b/gites/calendar/browser/resources/timeframe.css
@@ -15,6 +15,7 @@ clear:both;
 
 #timeframe_ul {
 margin-top: 45px;
+margin-left: 0px;
 }
 
 #calendars_container {
